# ccia_code_samples

./: .gitignore  CMakeLists.txt  CMakePresets.json
chapter06/: listing_6.9.cpp
include/ccia/: ccia.h
include/thread/safe/: thread_safe_queue.hpp
lib/ccia/: ccia.cpp
src/ccia/: app.cpp
tests/: CMakeLists.txt
tests/MainTests/: MainTests.cpp
tests/PerfTests/: PerfTestsMain.cpp
tests/thread/pool/: CMakeLists.txt  thread_pool_tests.cpp
tests/thread/safe/: CMakeLists.txt  thread_safe_queue_tests.cpp
